fix(articles): Fix home screen width on mobile

--- a/styles/_article.scss
+++ b/styles/_article.scss
@@ -30,6 +30,7 @@
   }
 
   &__homescreen_image {
+    width: 100%;
     max-width: 480px;
   }
 }
